--- a/examples/Materials.ipynb
+++ b/examples/Materials.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x118366550>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1d7f34c64f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -782,13 +782,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
-      "text/plain": "ChemicalDrawing(type=<EntityType.CHEMICAL_DRAWING: 'chemicalDrawing'>, eid='chemicalDrawing:2fc7a20f-e74c-4142-b4fa-cfa2fab41c58', digest='83077782', name='ChemDraw Document', description='', created_at=datetime.datetime(2022, 2, 13, 13, 19, 50, 766000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 4, 18, 7, 47, 58, 865000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "ChemicalDrawing(type=<EntityType.CHEMICAL_DRAWING: 'chemicalDrawing'>, eid='chemicalDrawing:2fc7a20f-e74c-4142-b4fa-cfa2fab41c58', digest='60887038', name='ChemDraw Document', description='', created_at=datetime.datetime(2022, 2, 13, 13, 19, 50, 766000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 5, 10, 13, 34, 43, 30000, tzinfo=datetime.timezone.utc))"
      },
-     "execution_count": 22,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,8 +807,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
+   "execution_count": 54,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Asset' object has no attribute 'can_be_changed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [54]\u001B[0m, in \u001B[0;36m<cell line: 11>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      6\u001B[0m file \u001B[38;5;241m=\u001B[39m File\u001B[38;5;241m.\u001B[39mread(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/Users/andrey.shishkin/Pictures/panda.jfif\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      7\u001B[0m \u001B[38;5;66;03m# asset['Unit Name'] = 'Updated from SDK'\u001B[39;00m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# asset['Units Image'] = file\u001B[39;00m\n\u001B[0;32m      9\u001B[0m \u001B[38;5;66;03m# asset['Custom Field 1 (SK)'] = chemDraw\u001B[39;00m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m# asset.save()\u001B[39;00m\n\u001B[1;32m---> 11\u001B[0m \u001B[43masset\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcan_be_changed\u001B[49m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'Asset' object has no attribute 'can_be_changed'"
+     ]
+    }
+   ],
    "source": [
     "from signals_notebook.common_types import File\n",
     "from signals_notebook.entities import EntityStore\n",
@@ -819,7 +831,7 @@
     "asset['Unit Name'] = 'Updated from SDK'\n",
     "asset['Units Image'] = file\n",
     "asset['Custom Field 1 (SK)'] = chemDraw\n",
-    "asset.save()"
+    "asset.save()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -830,9 +842,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 90,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from signals_notebook.entities.entity_store import EntityStore\n",
+    "\n",
+    "chemDraw = EntityStore.get('text:dc023925-847c-4d25-9aa2-c9f58fa0fc8a')\n",
+    "\n",
+    "batch = units_lib.get_batch('UNT-0002-0002')\n",
+    "batch['Originating Experiment'] = chemDraw\n",
+    "batch.save()\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
