--- a/examples/Materials.ipynb
+++ b/examples/Materials.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2883f6b6430>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x263617e84f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -810,16 +810,16 @@
    "execution_count": 23,
    "outputs": [],
    "source": [
-    "# from signals_notebook.common_types import File\n",
-    "# from signals_notebook.entities import EntityStore\n",
-    "#\n",
-    "# chemDraw = EntityStore.get('chemicalDrawing:2fc7a20f-e74c-4142-b4fa-cfa2fab41c58')\n",
-    "#\n",
-    "# file = File.read('/Users/evgeniy.pokidov/Pictures/quantori.png')\n",
-    "# asset['Unit Name'] = 'Updated from SDK'\n",
-    "# asset['Units Image'] = file\n",
-    "# asset['Custom Field 1 (SK)'] = chemDraw\n",
-    "# asset.save()\n"
+    "from signals_notebook.common_types import File\n",
+    "from signals_notebook.entities import EntityStore\n",
+    "\n",
+    "chemDraw = EntityStore.get('chemicalDrawing:2fc7a20f-e74c-4142-b4fa-cfa2fab41c58')\n",
+    "\n",
+    "file = File.read('/Users/evgeniy.pokidov/Pictures/quantori.png')\n",
+    "asset['Unit Name'] = 'Updated from SDK'\n",
+    "asset['Units Image'] = file\n",
+    "asset['Custom Field 1 (SK)'] = chemDraw\n",
+    "asset.save()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -833,13 +833,13 @@
    "execution_count": 24,
    "outputs": [],
    "source": [
-    "# from signals_notebook.entities.entity_store import EntityStore\n",
-    "#\n",
-    "# chemDraw = EntityStore.get('text:dc023925-847c-4d25-9aa2-c9f58fa0fc8a')\n",
-    "#\n",
-    "# batch = units_lib.get_batch('UNT-0002-0002')\n",
-    "# batch['Originating Experiment'] = chemDraw\n",
-    "# batch.save()\n",
+    "from signals_notebook.entities.entity_store import EntityStore\n",
+    "\n",
+    "chemDraw = EntityStore.get('text:dc023925-847c-4d25-9aa2-c9f58fa0fc8a')\n",
+    "\n",
+    "batch = units_lib.get_batch('UNT-0002-0002')\n",
+    "batch['Originating Experiment'] = chemDraw\n",
+    "batch.save()\n",
     "\n"
    ],
    "metadata": {
@@ -861,17 +861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Batch(asset_type_id='619656d40669900007d69414', eid='batch:628ddb41c3f49b60d87e9940', library_name='Units', digest='53183836', name='UNT-0002-0022', created_at=datetime.datetime(2022, 5, 25, 7, 31, 13, 407000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 5, 25, 7, 31, 13, 407000, tzinfo=datetime.timezone.utc), type=<MaterialType.BATCH: 'batch'>)"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 26,
+   "outputs": [],
    "source": [
     "from signals_notebook.common_types import MID\n",
     "from signals_notebook.entities.entity_store import EntityStore\n",
@@ -892,13 +883,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "Asset(asset_type_id='619656d40669900007d69414', eid='asset:628ddb52c3f49b60d87e9941', library_name='Units', digest='35192579', name='UNT-0011', created_at=datetime.datetime(2022, 5, 25, 7, 31, 30, 517000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 5, 25, 7, 31, 30, 517000, tzinfo=datetime.timezone.utc), type=<MaterialType.ASSET: 'asset'>)"
+      "text/plain": "Asset(asset_type_id='619656d40669900007d69414', eid='asset:628e281c85a9cb7eee7e2d04', library_name='Units', digest='82895229', name='UNT-0013', created_at=datetime.datetime(2022, 5, 25, 12, 59, 8, 854000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 5, 25, 12, 59, 8, 854000, tzinfo=datetime.timezone.utc), type=<MaterialType.ASSET: 'asset'>)"
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
