PSFSN-18 Convert generated HTML to PDF: added example of pdf creation

--- a/examples/Experiment.ipynb
+++ b/examples/Experiment.ipynb
@@ -29,7 +29,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x190c08532b0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1624f2a52b0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -140,18 +140,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not presented in PATH\n"
+      "Not presented in PATH\n",
+      "No wkhtmltopdf executable found: \"YOUR PATH/wkhtmltopdf/bin/wkhtmltopdf.exe\"\n",
+      "If this file exists please check that this process can read it or you can pass path to it manually in method call, check README. Otherwise please install wkhtmltopdf - https://github.com/JazzCore/python-pdfkit/wiki/Installing-wkhtmltopdf\n"
      ]
     }
    ],
    "source": [
     "import pdfkit\n",
     "\n",
+    "# You can configure PDF file. Use different options for it. You can change Footers, Headers, Margin, Padding and etc.\n",
+    "# https://pypi.org/project/pdfkit/\n",
+    "options = {\n",
+    "        'margin-top': '1.25in',\n",
+    "        'margin-right': '0.75in',\n",
+    "        'margin-bottom': '0.75in',\n",
+    "        'margin-left': '0.75in',\n",
+    "        'page-size': 'A4',\n",
+    "        'header-spacing': 6,\n",
+    "        'footer-spacing': 6,\n",
+    "        'encoding': \"UTF-8\",\n",
+    "        'header-center': 'YOUR HEADER',\n",
+    "        'footer-center': 'YOUR FOOTER',\n",
+    "        # 'header-html': You can use this options and create header/footer as html\n",
+    "        # 'footer-html':\n",
+    "        'custom-header' : [\n",
+    "            ('Accept-Encoding', 'gzip')\n",
+    "        ],\n",
+    "        'no-outline':None,\n",
+    "    }\n",
+    "\n",
     "try:\n",
-    "    config = pdfkit.configuration(wkhtmltopdf='YOUR SYSTEM PATH/wkhtmltopdf/bin/wkhtmltopdf.exe')\n",
-    "    pdfkit.from_string(experiment_html, 'sample.pdf', configuration=config)\n",
-    "except OSError:\n",
-    "    print('Not presented in PATH')"
+    "    config = pdfkit.configuration(wkhtmltopdf='YOUR PATH/wkhtmltopdf/bin/wkhtmltopdf.exe')  # <- change YOUR PATH\n",
+    "    pdfkit.from_string(experiment_html, 'sample.pdf', configuration=config, options=options)\n",
+    "except OSError as e:\n",
+    "    print('Not presented in PATH')\n",
+    "    print(e)"
    ],
    "metadata": {
     "collapsed": false,
