PSFSN-20 Changing Template Refactoring: changed Middleware to Wrapper/ changed logic

--- a/examples/Experiment.ipynb
+++ b/examples/Experiment.ipynb
@@ -29,7 +29,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2a8bb9242b0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1566d3a52b0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -118,7 +118,7 @@
     "from signals_notebook.entities import Text\n",
     "\n",
     "# changing template for text (example)\n",
-    "Text.set_template_name('new_text_template.html')\n",
+    "Text.set_template_name('./templates/new_text_template.html')\n",
     "\n",
     "experiment_html = experiment.get_html()\n",
     "display(HTML(data=experiment_html))"
