PSFSN-20 Changing Template Refactoring: added description

--- a/examples/Experiment.ipynb
+++ b/examples/Experiment.ipynb
@@ -118,6 +118,7 @@
     "from signals_notebook.entities import Text\n",
     "\n",
     "# changing template for text (example)\n",
+    "# Text.set_template_name('your path/templates/new_text_template.html')  you can use absolute or relative path\n",
     "Text.set_template_name('./templates/new_text_template.html')\n",
     "\n",
     "experiment_html = experiment.get_html()\n",
