PSFSN-24: added sample_table_row

--- a/examples/SamplesContainer.ipynb
+++ b/examples/SamplesContainer.ipynb
@@ -133,7 +133,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "outputs": [],
-   "source": [],
+   "source": [
+    "samplesContainer.fetch_sample_from_table('samplesContainer:b66ca054-3288-4b32-8892-2da8c2282bb8')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
