PSFSN-24: fixed mypy warning

--- a/examples/Sample.ipynb
+++ b/examples/Sample.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2b6a8f85400>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x177bba44400>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -89,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\d.cherednichenko\\AppData\\Local\\Temp\\ipykernel_5836\\3925987743.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\d.cherednichenko\\AppData\\Local\\Temp\\ipykernel_3396\\3925987743.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -135,7 +135,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:f356dfe9-3bd7-4ab6-885a-c73d4cc72f13', digest='23238703', name='Sample-1756', description='', created_at=datetime.datetime(2022, 6, 2, 7, 27, 9, 819000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 8, 14, 26, 11, 410000, tzinfo=datetime.timezone.utc), fields=None)"
+      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:f356dfe9-3bd7-4ab6-885a-c73d4cc72f13', digest='47317282', name='Sample-1756', description='', created_at=datetime.datetime(2022, 6, 2, 7, 27, 9, 819000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 8, 14, 27, 31, 315000, tzinfo=datetime.timezone.utc), fields=None)"
      },
      "execution_count": 7,
      "metadata": {},
@@ -270,9 +270,18 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[SampleProperty(id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308'), name='ID', content=CellPropertyContent(value='Sample-1756', name=None, eid=None, values=None)),\n SampleProperty(id=UUID('278c491b-dd8a-3361-8c14-9c4ac790da34'), name='Template', content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)),\n SampleProperty(id='digests.self', name=None, content=None),\n SampleProperty(id='digests.external', name=None, content=None),\n SampleProperty(id='1', name='Created Date', content=CellPropertyContent(value='2022-06-02T07:27:10.072365283Z', name=None, eid=None, values=None)),\n SampleProperty(id='2', name='Description', content=CellPropertyContent(value='simple', name=None, eid=None, values=None)),\n SampleProperty(id='3', name='Comments', content=CellPropertyContent(value='555', name=None, eid=None, values=None)),\n SampleProperty(id='4', name='Amount', content=None),\n SampleProperty(id='10', name='Attached Docs', content=CellPropertyContent(value='0', name=None, eid='sample:f356dfe9-3bd7-4ab6-885a-c73d4cc72f13', values=None)),\n SampleProperty(id='sampleId', name='ID', content=CellPropertyContent(value='sample:f356dfe9-3bd7-4ab6-885a-c73d4cc72f13', name=None, eid=None, values=None)),\n SampleProperty(id='sourceName', name='Template', content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)),\n SampleProperty(id='5', name='Chemical Name', content=None),\n SampleProperty(id='6', name='FM', content=None),\n SampleProperty(id='7', name='EM', content=None),\n SampleProperty(id='8', name='MF', content=None),\n SampleProperty(id='9', name='MW', content=None)]"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sample_property_patched = sample.patch_property_by_id('3')"
+    "sample.properties"
    ],
    "metadata": {
     "collapsed": false,
@@ -286,16 +295,31 @@
    "execution_count": 14,
    "outputs": [
     {
-     "data": {
-      "text/plain": "SampleProperty(id='3', name='Comments', content=CellPropertyContent(value='555', name=None, eid=None, values=None))"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n",
+      "<class 'signals_notebook.entities.samples.sample.SampleProperty'>\n"
+     ]
     }
    ],
    "source": [
-    "sample_property_patched"
+    "for item in sample.properties:\n",
+    "    print(type(item))"
    ],
    "metadata": {
     "collapsed": false,
@@ -309,18 +333,54 @@
    "execution_count": 15,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "no properties changed here",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': '3', 'type': 'property', 'attributes': {'content': {'value': '555', 'name': None, 'eid': None, 'values': None}}}]\n"
+     ]
+    },
+    {
+     "ename": "SignalsNotebookError",
+     "evalue": "<SignalsNotebookError status=400 code=BadRequest> title=The request parameters are in bad format. detail=[ERROR - [Path '/data/attributes'] Instance failed to match exactly one schema (matched 0 out of 2): [/properties/data/properties/attributes/oneOf/0: Object instance has properties which are not allowed by the schema: [\"eid\"], /properties/data/properties/attributes/oneOf/0: Instance type (null) does not match any allowed primitive type (allowed: [\"string\"]), /properties/data/properties/attributes/oneOf/0: Instance type (null) does not match any allowed primitive type (allowed: [\"array\"]), /properties/data/properties/attributes/oneOf/1: Object instance has properties which are not allowed by the schema: [\"data\"], /properties/data/properties/attributes/oneOf/1: Object has missing required properties ([\"content\"])]\n\tERROR - [Path '/data/attributes/data/0/attributes/content'] Object instance has properties which are not allowed by the schema: [\"eid\"]: []\n\tERROR - [Path '/data/attributes/data/0/attributes/content/name'] Instance type (null) does not match any allowed primitive type (allowed: [\"string\"]): []\n\tERROR - [Path '/data/attributes/data/0/attributes/content/values'] Instance type (null) does not match any allowed primitive type (allowed: [\"array\"]): []\n\tERROR - [Path '/data/attributes'] Object instance has properties which are not allowed by the schema: [\"data\"]: []\n\tERROR - [Path '/data/attributes'] Object has missing required properties ([\"content\"]): []]>",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [15]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# if we are trying to change this property again - we will get an exception\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m sample_property_pathed_again \u001B[38;5;241m=\u001B[39m \u001B[43msample\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpatch_property_by_id\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m3\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\entities\\samples\\sample.py:137\u001B[0m, in \u001B[0;36mSample.patch_property_by_id\u001B[1;34m(self, property_id, digest, force)\u001B[0m\n\u001B[0;32m    135\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m item\u001B[38;5;241m.\u001B[39mid \u001B[38;5;241m==\u001B[39m property_id:\n\u001B[0;32m    136\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m item\u001B[38;5;241m.\u001B[39mis_changed:\n\u001B[1;32m--> 137\u001B[0m             \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mno properties changed here\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m    138\u001B[0m         request_body \u001B[38;5;241m=\u001B[39m item\u001B[38;5;241m.\u001B[39mrepresentation_for_update_by_id\n\u001B[0;32m    140\u001B[0m response \u001B[38;5;241m=\u001B[39m api\u001B[38;5;241m.\u001B[39mcall(\n\u001B[0;32m    141\u001B[0m     method\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPATCH\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    142\u001B[0m     path\u001B[38;5;241m=\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_get_samples_endpoint(), \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39meid, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mproperties\u001B[39m\u001B[38;5;124m'\u001B[39m, _property_id),\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    150\u001B[0m     },\n\u001B[0;32m    151\u001B[0m )\n",
-      "\u001B[1;31mAttributeError\u001B[0m: no properties changed here"
+      "\u001B[1;31mSignalsNotebookError\u001B[0m                      Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [15]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m sample_property_patched \u001B[38;5;241m=\u001B[39m \u001B[43msample\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msave\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\entities\\samples\\sample.py:116\u001B[0m, in \u001B[0;36mSample.save\u001B[1;34m(self, force)\u001B[0m\n\u001B[0;32m    114\u001B[0m         request_body\u001B[38;5;241m.\u001B[39mappend(item\u001B[38;5;241m.\u001B[39mrepresentation_for_update\u001B[38;5;241m.\u001B[39mdict())\n\u001B[0;32m    115\u001B[0m \u001B[38;5;28mprint\u001B[39m(request_body)\n\u001B[1;32m--> 116\u001B[0m \u001B[43mapi\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcall\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    117\u001B[0m \u001B[43m    \u001B[49m\u001B[43mmethod\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mPATCH\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    118\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_samples_endpoint\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43meid\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mproperties\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    119\u001B[0m \u001B[43m    \u001B[49m\u001B[43mparams\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m{\u001B[49m\n\u001B[0;32m    120\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mforce\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mjson\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdumps\u001B[49m\u001B[43m(\u001B[49m\u001B[43mforce\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    121\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mvalue\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mnormalized\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    122\u001B[0m \u001B[43m    \u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    123\u001B[0m \u001B[43m    \u001B[49m\u001B[43mjson\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m{\u001B[49m\n\u001B[0;32m    124\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdata\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mattributes\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdata\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mrequest_body\u001B[49m\u001B[43m}\u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    125\u001B[0m \u001B[43m    \u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    126\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    127\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_reload_properties()\n",
+      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\api.py:118\u001B[0m, in \u001B[0;36mSignalsNotebookApi.call\u001B[1;34m(self, method, path, params, data, json, headers)\u001B[0m\n\u001B[0;32m    112\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m response\u001B[38;5;241m.\u001B[39mok:\n\u001B[0;32m    113\u001B[0m     log\u001B[38;5;241m.\u001B[39merror(\n\u001B[0;32m    114\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mError has been occurred while getting response, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    115\u001B[0m         response\u001B[38;5;241m.\u001B[39mstatus_code,\n\u001B[0;32m    116\u001B[0m         extra\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mresponse\u001B[39m\u001B[38;5;124m'\u001B[39m: response},\n\u001B[0;32m    117\u001B[0m     )\n\u001B[1;32m--> 118\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m SignalsNotebookError(response)\n\u001B[0;32m    119\u001B[0m log\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSuccessful request - HTTP url: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m, response\u001B[38;5;241m.\u001B[39murl, response\u001B[38;5;241m.\u001B[39mstatus_code)\n\u001B[0;32m    121\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m response\n",
+      "\u001B[1;31mSignalsNotebookError\u001B[0m: <SignalsNotebookError status=400 code=BadRequest> title=The request parameters are in bad format. detail=[ERROR - [Path '/data/attributes'] Instance failed to match exactly one schema (matched 0 out of 2): [/properties/data/properties/attributes/oneOf/0: Object instance has properties which are not allowed by the schema: [\"eid\"], /properties/data/properties/attributes/oneOf/0: Instance type (null) does not match any allowed primitive type (allowed: [\"string\"]), /properties/data/properties/attributes/oneOf/0: Instance type (null) does not match any allowed primitive type (allowed: [\"array\"]), /properties/data/properties/attributes/oneOf/1: Object instance has properties which are not allowed by the schema: [\"data\"], /properties/data/properties/attributes/oneOf/1: Object has missing required properties ([\"content\"])]\n\tERROR - [Path '/data/attributes/data/0/attributes/content'] Object instance has properties which are not allowed by the schema: [\"eid\"]: []\n\tERROR - [Path '/data/attributes/data/0/attributes/content/name'] Instance type (null) does not match any allowed primitive type (allowed: [\"string\"]): []\n\tERROR - [Path '/data/attributes/data/0/attributes/content/values'] Instance type (null) does not match any allowed primitive type (allowed: [\"array\"]): []\n\tERROR - [Path '/data/attributes'] Object instance has properties which are not allowed by the schema: [\"data\"]: []\n\tERROR - [Path '/data/attributes'] Object has missing required properties ([\"content\"]): []]>"
      ]
     }
    ],
+   "source": [
+    "sample_property_patched = sample.save()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sample_property_patched"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# if we are trying to change this property again - we will get an exception\n",
     "sample_property_pathed_again = sample.patch_property_by_id('3')"
