PSFSN-24: added test for create method

--- a/examples/Sample.ipynb
+++ b/examples/Sample.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2b33d4e5400>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x18718494400>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -77,7 +77,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:f356dfe9-3bd7-4ab6-885a-c73d4cc72f13', digest='47317282', name='Sample-1756', description='', created_at=datetime.datetime(2022, 6, 2, 7, 27, 9, 819000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 8, 14, 27, 31, 315000, tzinfo=datetime.timezone.utc), fields=None)"
+      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:f356dfe9-3bd7-4ab6-885a-c73d4cc72f13', digest='99355981', name='Sample-1756', description='', created_at=datetime.datetime(2022, 6, 2, 7, 27, 9, 819000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 8, 14, 27, 31, 315000, tzinfo=datetime.timezone.utc), fields=None)"
      },
      "execution_count": 5,
      "metadata": {},
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import Sample\n",
@@ -351,8 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"data\": {\"type\": \"sample\", \"attributes\": {\"fields\": [{\"id\": \"3\", \"name\": null, \"content\": {\"value\": \"create_NEW_SAMPLE\", \"name\": null, \"eid\": null, \"values\": null}}]}, \"relationships\": {\"template\": {\"data\": {\"type\": \"sample\", \"id\": \"sample:fcaa5e11-ace8-4d2c-a212-293dad3c2122\"}}, \"ancestors\": {\"data\": [{\"type\": \"experiment\", \"id\": \"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\"}]}}}}\n",
+      "{'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be'}, 'data': {'type': 'entity', 'id': 'sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be', 'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be'}, 'attributes': {'id': 'sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be', 'eid': 'sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be', 'name': 'Sample-1781', 'description': '', 'createdAt': '2022-06-14T09:51:10.765Z', 'editedAt': '2022-06-14T09:51:10.765Z', 'type': 'sample', 'digest': '25881025', 'fields': {'Description': {'value': ''}, 'Name': {'value': 'Sample-1781'}}, 'flags': {'canEdit': True}}, 'relationships': {'createdBy': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/users/103'}, 'data': {'type': 'user', 'id': '103'}}, 'editedBy': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/users/103'}, 'data': {'type': 'user', 'id': '103'}}, 'ancestors': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be/ancestors'}, 'data': [{'type': 'entity', 'id': 'journal:111a8a0d-2772-47b0-b5b8-2e4faf04119e', 'meta': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/journal:111a8a0d-2772-47b0-b5b8-2e4faf04119e'}}}, {'type': 'entity', 'id': 'experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f', 'meta': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f'}}}, {'type': 'entity', 'id': 'samplesContainer:3cd945e0-134d-4ae5-94a9-b6aee55528b2', 'meta': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/samplesContainer:3cd945e0-134d-4ae5-94a9-b6aee55528b2'}}}]}, 'owner': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/users/103'}, 'data': {'type': 'user', 'id': '103'}}, 'properties': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/samples/sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be/properties'}}, 'chemical': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/samples/sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be/export?format=mol'}}}}, 'included': [{'type': 'entity', 'id': 'samplesContainer:3cd945e0-134d-4ae5-94a9-b6aee55528b2', 'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/samplesContainer:3cd945e0-134d-4ae5-94a9-b6aee55528b2'}, 'attributes': {'type': 'samplesContainer', 'eid': 'samplesContainer:3cd945e0-134d-4ae5-94a9-b6aee55528b2', 'name': 'Samples Table', 'digest': '12345425', 'fields': {'Description': {'value': ''}, 'Name': {'value': 'Samples Table'}}, 'flags': {}}}, {'type': 'entity', 'id': 'journal:111a8a0d-2772-47b0-b5b8-2e4faf04119e', 'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/journal:111a8a0d-2772-47b0-b5b8-2e4faf04119e'}, 'attributes': {'type': 'journal', 'eid': 'journal:111a8a0d-2772-47b0-b5b8-2e4faf04119e', 'name': 'Test creation by SDK', 'digest': '49635439', 'fields': {'Description': {'value': 'Created by Eugene Pokidov'}, 'My Notebook Field 1 (SK)': {'value': ''}, 'My Notebook Field 2 (SK)': {'value': ''}, 'Name': {'value': 'Test creation by SDK'}}, 'flags': {}}}, {'type': 'entity', 'id': 'experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f', 'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/entities/experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f'}, 'attributes': {'type': 'experiment', 'eid': 'experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f', 'name': 'Test experiment creation by SDK', 'digest': '60552240', 'fields': {'Description': {'value': 'Created by Eugene Pokidov'}, 'Name': {'value': 'Test experiment creation by SDK'}}, 'flags': {}}}, {'type': 'user', 'id': '103', 'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/users/103'}, 'attributes': {'userId': '103', 'userName': 'sergey.kuznetsov@quantori.com', 'email': 'sergey.kuznetsov@quantori.com', 'firstName': 'Sergey', 'lastName': 'Kuznetsov', 'isEnabled': True}, 'relationships': {'picture': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/users/103/picture'}}, 'systemGroups': {'links': {'self': 'https://quantori.signalsnotebook.perkinelmer.cloud/api/rest/v1.0/users/103/systemGroups'}}}}]}\n"
+     ]
+    }
+   ],
    "source": [
     "from signals_notebook.entities.samples.cell import CellPropertyContent\n",
     "\n",
@@ -360,11 +369,11 @@
     "    id='3',\n",
     "    content=CellPropertyContent(value='create_NEW_SAMPLE'),\n",
     ")\n",
-    "\n",
+    "template_sample = EntityStore.get('sample:fcaa5e11-ace8-4d2c-a212-293dad3c2122')\n",
     "new_sample = Sample.create(\n",
-    "    sample_eid='sample:fcaa5e11-ace8-4d2c-a212-293dad3c2122',\n",
     "    fields=[new_sample_property],\n",
-    "    template=experiment,\n",
+    "    template=template_sample,\n",
+    "    ancestors=[experiment],\n",
     ")"
    ],
    "metadata": {
@@ -376,13 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:fa34c835-6271-4c59-b320-ff26089e89c6', digest='96611128', name='Sample-1776', description='', created_at=datetime.datetime(2022, 6, 13, 13, 54, 43, 40000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 13, 13, 54, 43, 40000, tzinfo=datetime.timezone.utc), fields={'Description': FieldData(display=None, value='', units=None, eid=None), 'Name': FieldData(display=None, value='Sample-1776', units=None, eid=None)})"
+      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:2d9c3f5c-065a-4d56-992f-c0b2003eb9be', digest='25881025', name='Sample-1781', description='', created_at=datetime.datetime(2022, 6, 14, 9, 51, 10, 765000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 14, 9, 51, 10, 765000, tzinfo=datetime.timezone.utc), fields={'Description': FieldData(display=None, value='', units=None, eid=None), 'Name': FieldData(display=None, value='Sample-1781', units=None, eid=None)})"
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
