PSFSN-24: made code refactoring

--- a/examples/SamplesContainer.ipynb
+++ b/examples/SamplesContainer.ipynb
@@ -288,6 +288,18 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
