--- a/examples/spotfiredxp.ipynb
+++ b/examples/spotfiredxp.ipynb
@@ -2,22 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -39,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "<signals_notebook.api.SignalsNotebookApi at 0x7f9770044520>"
+       "<signals_notebook.api.SignalsNotebookApi at 0x7f898376a3a0>"
       ]
      },
      "execution_count": 4,
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -92,10 +83,10 @@
     {
      "data": {
       "text/plain": [
-       "File(name='spotfire.dxp', content=b'image content', content_type='application/vnd.spotfire.dxp')"
+       "File(name='spotfire.dxp', content=b'file content', content_type='application/vnd.spotfire.dxp')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -130,10 +121,10 @@
     {
      "data": {
       "text/plain": [
-       "File(name='updated_spotfiredxp.dxp', content=b'image content', content_type='application/vnd.spotfire.dxp')"
+       "File(name='updated_spotfiredxp.dxp', content=b'file content', content_type='application/vnd.spotfire.dxp')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,53 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Experiment(type=<EntityType.EXPERIMENT: 'experiment'>, eid='experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f', digest='37244646', name='Test experiment creation by SDK', description='Created by Eugene Pokidov', created_at=datetime.datetime(2022, 2, 3, 14, 42, 52, 42000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 23, 14, 8, 3, 761000, tzinfo=datetime.timezone.utc), state=<ExperimentState.OPEN: 'open'>)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "spotfire.delete()"
+   ]
   }
  ],
  "metadata": {
