SBT-7: refactored code/ added new entities for User

--- a/examples/User.ipynb
+++ b/examples/User.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1d7d2eab550>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x251bc92b550>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -112,6 +112,29 @@
    "source": [
     "user_picture = user.picture\n",
     "user_picture"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[Group(type='group', eid='group:102', digest='48429363', name='All users', description='Group containing all users', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 625000, tzinfo=datetime.timezone.utc), id='102', isSystem=True),\n Group(type='group', eid='group:101', digest='79277658', name='Administrators', description='Group containing all administrators', created_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2021, 10, 22, 13, 35, 58, 444000, tzinfo=datetime.timezone.utc), id='101', isSystem=True)]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.get_system_groups()"
    ],
    "metadata": {
     "collapsed": false,
